# generate_prompt

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  vercel.json
backend/: main.py
backend/agent/: graph.py  nodes.py  router.py  state.py
backend/auth/: models.py  router.py
backend/db/: database.py
backend/models/: schemas.py
db/: database.py
front/: index.html  landing.html  relay.html
